@@ -1,4 +1,8 @@
-tgtnames = xtcreader xtcmonserver xtcmonclient xtcmonclientexample
+tgtnames = xtcreader xtcmonserver xtcmonclient xtcmonclientexample acqconfig agatfile
+
+CXXFLAGS += -pthread -m32 -I/reg/g/pcds/package/root/include
+
+LXFLAGS += -L/reg/g/pcds/package/root/lib -lCore -lCint -lRIO -lNet -lHist -lGraf -lGraf3d -lGpad -lTree -lRint -lPostscript -lMatrix -lPhysics -lMathCore -lThread -pthread -lm -ldl -rdynamic
 
 ifneq ($(findstring x86_64-linux,$(tgt_arch)),)
 syslibdir := /usr/lib64
@@ -9,6 +13,13 @@ endif
 tgtsrcs_xtcreader := xtcreader.cc
 tgtlibs_xtcreader := pdsdata/xtcdata pdsdata/acqdata
 tgtslib_xtcreader := $(syslibdir)/rt
+
+tgtsrcs_agatfile := agatfile.cc
+tgtlibs_agatfile := pdsdata/xtcdata pdsdata/acqdata 
+tgtslib_agatfile := $(syslibdir)/rt
+
+tgtsrcs_acqconfig := acqconfig.cc
+tgtlibs_acqconfig := pdsdata/xtcdata pdsdata/acqdata
 
 tgtsrcs_xtcmonserver := xtcmonserver.cc
 tgtlibs_xtcmonserver := pdsdata/xtcdata pdsdata/acqdata
